# ezsem

./: .gitignore
EVM/: ~$15_Prilozhenia.docx
EVM/1/: 1.3.asm  1.5.asm  1.6.asm  1.7.asm  1.docx  primer1.docx  primer2.docx
EVM/2/: 2.4.asm  2.5.asm  ind.asm  indic.asm  klav.asm  myadc.asm  sklav.asm
EVM/2/scr/: Thumbs.db
EVM/3/p3.1/: 3.1.asm
EVM/3/p3.2/: 3.2.asm
EVM/3/p34/: 3.4.asm  timer.asm
EVM/3/p35/: 3.5.asm
EVM/3/p36/: timer.asm
EVM/3/p37/: clock.asm  osBU.asm  to_dec.asm
OS/1/report/: report.aux  report.out  report.tex  report.toc
OS/1/report/listings/: 2.6  (+1 more)
OS/2/: Программа работыФС.docx
OS/2/report/: report.tex
OS/ex1/report/: report.tex
databases/: 2.docx  3.docx  PHARMACY.FDB  PHARMACY.sql  pharmacy_all.sql  schema.pdg
discretach/fedoshka/: max10.doc
discretach/koshel/: apdu.docx  info.txt
discretach/koshel/apdu/: PROJECT.DBK  PROJECT.DSN  PROJECT.LIS  PROJECT.MAX  SOVIET.LLB  project.opj
networks/TCP/clientWIN/networks/: CMakeLists.txt
networks/TCP/clientWIN/networks/sources/: Client.cpp
networks/TCP/serverLINUX/networks/: CMakeLists.txt
networks/TCP/serverLINUX/networks/headers/: ClientCommand.h  Command.h  Server.h  ServerCommand.h
networks/TCP/serverLINUX/networks/outputs/Debug/: networks  server.backup  server.data
networks/TCP/serverLINUX/networks/sources/: ClientCommand.cpp  Command.cpp  Server.cpp  ServerCommand.cpp  main.cpp
networks/networks/client/: CMakeLists.txt
networks/networks/server/: CMakeLists.txt
networks/result/linuxTCP/: server  server.data
networks/result/linuxUDP/: client  server
(+32 files in other folders)
